# cipMasterWeb

./: CMakeLists.txt  CMakePresets.json  README.md  eipscanner_1.3.0-1_amd64.deb  tcopentrdp-2.2.23-amd64.deb
.github/workflows/: ci.yml
cmake/Modules/: FindEIPScanner.cmake  FindJsoncpp.cmake
config/: config.json
docs/: UI_DESIGN.md  UI_DEVELOPMENT_TASKS.md
packaging/container/: Dockerfile
packaging/systemd/: tcms-cip-sim.service
scripts/: build_with_eipscanner_source.sh  install_debian_dependencies.sh
src/: main.cpp
src/controllers/: ConnectionController.cpp  ConnectionController.h  DeviceController.cpp  DeviceController.h  ExplicitMessagingController.cpp  ExplicitMessagingController.h  HealthController.cpp  HealthController.h  HomeController.cpp  HomeController.h  SignalController.cpp  SignalController.h
src/models/: ConnectionConfig.h  Device.h  ExplicitMessage.h  SignalMapping.h
src/repositories/: DeviceRepository.h  InMemoryDeviceRepository.cpp  InMemoryDeviceRepository.h  JsonDeviceRepository.cpp  JsonDeviceRepository.h  RepositoryProvider.cpp  RepositoryProvider.h
src/services/: ConnectionLifecycleService.cpp  ConnectionLifecycleService.h  ConnectionLifecycleServiceProvider.h  EIPExplicitMessageService.cpp  EIPExplicitMessageService.h  EIPIdentityService.cpp  EIPIdentityService.h  ExplicitMessageService.h  ExplicitMessageServiceProvider.cpp  ExplicitMessageServiceProvider.h  IOSignalService.cpp  IOSignalService.h  IdentityService.h  IdentityServiceProvider.cpp  IdentityServiceProvider.h
tests/: CMakeLists.txt  identity_tests.cpp  library_detection.cpp  repository_tests.cpp
views/: home.csp
views/connections/: monitor.csp
views/devices/: assemblies.csp  create.csp  edit.csp  explicit_message.csp  io.csp  list.csp  show.csp
